创建了摩点大赏监听。具有基本的自动响应功能。

--- a/v2.3.conf
+++ b/v2.3.conf
@@ -48,7 +48,7 @@
         "pluginPath" : ".",
         
         # 启动时需加载的插件
-        "plugins" : [],
+        "plugins" : ['Modian'],
         
         # 插件的配置（由用户自定义）
         "pluginsConf" : {},
