--- a/v2.3.conf
+++ b/v2.3.conf
@@ -6,8 +6,7 @@
     #     根配置 -> 默认配置 -> 用户 somebody 的配置 -> 命令行参数配置
     # 使用 qqbot 启动程序时，依次加载：
     #     根配置 -> 默认配置 -> 命令行参数配置
-    
-    # 用户 somebody 的配置
+
     "zmarsarc" : {
         
         # QQBot-term （HTTP-API） 服务器端口号（该服务器监听 IP 为 127.0.0.1 ）
@@ -36,10 +35,10 @@
         "debug" : True,
 
         # QQBot 掉线后自动重启
-        "restartOnOffline" : False,
+        "restartOnOffline" : True,
         
         # 在后台运行 qqbot ( daemon 模式)
-        "daemon": False,
+        "daemon": True,
         
         # 完成全部联系人列表获取之后才启动 QQBot 
         "startAfterFetch" : False,
@@ -54,7 +53,54 @@
         "pluginsConf" : {},
     
     },
-    
+
+    "debug" : {
+
+        # QQBot-term （HTTP-API） 服务器端口号（该服务器监听 IP 为 127.0.0.1 ）
+        # 设置为 0 则不会开启本服务器（此时 qq 命令和 HTTP-API 接口都无法使用）。
+        "termServerPort" : 8188,
+
+        # 二维码 http 服务器 ip，请设置为公网 ip 或空字符串
+        "httpServerIP" : "",
+
+        # 二维码 http 服务器端口号
+        "httpServerPort" : 8189,
+
+        # 自动登录的 QQ 号
+        "qq" : "526657130",
+
+        # 接收二维码图片的邮箱账号
+        "mailAccount" : "526657130@qq.com",
+
+        # 该邮箱的 IMAP/SMTP 服务授权码
+        "mailAuthCode" : "qpikxhxdpbipbgbc",
+
+        # 是否以文本模式显示二维码
+        "cmdQrcode" : False,
+
+        # 显示/关闭调试信息
+        "debug" : True,
+
+        # QQBot 掉线后自动重启
+        "restartOnOffline" : False,
+
+        # 在后台运行 qqbot ( daemon 模式)
+        "daemon": False,
+
+        # 完成全部联系人列表获取之后才启动 QQBot
+        "startAfterFetch" : True,
+
+        # 插件目录
+        "pluginPath" : ".",
+
+        # 启动时需加载的插件
+        "plugins" : [],
+
+        # 插件的配置（由用户自定义）
+        "pluginsConf" : {},
+
+    },
+
     # 可以在 默认配置 中配置所有用户都通用的设置
     "默认配置" : {
         "qq" : "",
